k8s_resource_yaml/release_strategy/gray.yaml
apiVersion: v1
kind: Service
metadata:
  name: old-service
spec:
  type: NodePort
  selector:
    app: old-nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: old-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: old-nginx
  template:
    metadata:
      labels:
        app: old-nginx
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: new-service
spec:
  type: NodePort
  selector:
    app: new-nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: new-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-nginx
  template:
    metadata:
      labels:
        app: new-nginx
        version: v2
    spec:
      containers:
      - name: nginx
        image: nginx:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gray
  annotations:
    nginx.ingress.kubernetes.io/service-match: |
            new-service: header("myname", /^myapp$/)
    nginx.ingress.kubernetes.io/service-weight: |
            new-service: 50, old-service: 50
spec:
  rules:
  - host: aaa.bbb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: old-service
          servicePort: 80
      - path: /
        backend:
          serviceName: new-service
          servicePort: 80
